build: rearrange gradle build files